<resources>
    <string name="app_name">Mini POS</string>

    <string name="option_type">Select Option</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>

    <string name="delete_all">Delete All</string>
    <string name="edit">Edit</string>
    <string name="clos">Close</string>
    <string name="done">Done</string>
    <string name="add">Add</string>

    <string name="log_in">Log In</string>
    <string name="user_name">User Name </string>
    <string name="password">Password </string>
    <string name="enter">Enter</string>

    <string name="price">Price</string>
    <string name="quantity">Qty</string>
    <string name="close_day">Close Day</string>
    <string name="new_day">New Day</string>
    <string name="total_cash">Total Cash</string>
    <string name="close">Close</string>

    <string name="item_no">Item No</string>
    <string name="item_name">Item Name</string>
    <string name="total">Total</string>
    <string name="total_no_tax">Total Before Tax</string>
    <string name="tax_value">Tax Percent</string>
    <string name="net_sales">Net Sales</string>
    <string name="categories">Categories</string>
    <string name="add_item">Add Item</string>
    <string name="functions">Functions</string>
    <string name="settings">Settings</string>

    <string name="barcode">Barcode</string>
    <string name="item_name_arabic">Item Name (Arabic)</string>
    <string name="item_name_english">Item Name (English)</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="sale_price">Sale Price</string>
    <string name="item_description">Item Description</string>
    <string name="item_pic">Item Picture</string>
    <string name="add_cat">Add Category</string>
    <string name="add_sub_cat">Add Sub Category</string>
    <string name="cat_no">Category No :</string>
    <string name="cat_name">Category Name :</string>
    <string name="cat_pic">Category Pic :</string>

    <string name="day">Day</string>
    <string name="net_sales_before_tax">Net Sales Before Tax</string>
    <string name="net_tax">Net Tax</string>
    <string name="net_sales_after_tax">Net Sales After Tax</string>

    <string name="details_sales_report">Details Sales Report</string>
    <string name="from">From Date</string>
    <string name="to">To Date</string>
    <string name="preview">Preview</string>
    <string name="paid_qty">Paid Qty</string>

    <string name="delete_item">Delete Item</string>
    <string name="edit_price">Edit Price</string>
    <string name="edit_qty">Edit Quantity</string>

    <string name="required">Required</string>
    <string name="payed">Payed</string>
    <string name="remaining">Remaining</string>
    <string name="pay">Pay</string>

    <string name="cash_report">Cash Report</string>
    <string name="sales_report">Sales Report</string>
    <string name="reports">Reports</string>

    <string name="ip_no">IP No</string>
    <string name="company_name">Company Name</string>
    <string name="company_id">Company ID</string>
    <string name="POS_no">POS No</string>
    <string name="control">Control </string>
    <string name="tax_type">Tax Type  </string>
    <string name="exclude">Exclude</string>
    <string name="include">include</string>
    <string name="theme">Theme</string>
    <string name="save">Save</string>

    <string name="delete_message">Are you sure, You want to delete all items ?</string>
    <string name="save_message">Are you sure, You want to Save This Item ?</string>
    <string name="delete_message_for_item">Are you sure, You want to delete this items ?</string>
    <string name="update_message_for_item">Are you sure, You want to update this items ?</string>
    <string name="delete_item_message">Are you sure, You want to delete this item ?</string>
    <string name="delete_category_message">Are you sure, You want to delete this category ?</string>
    <string name="no_items_message">No items !</string>
    <string name="cant_edit_price_message">Can not edit price !</string>
    <string name="cant_edit_qty_message">Can not edit quantity !</string>
    <string name="item_added_message">Item added to menu !</string>
    <string name="item">Item</string>
    <string name="add_new_item">Add New Item</string>
    <string name="All_category">All Category</string>
    <string name="voucher_no">Voucher No</string>
    <string name="delete_last_item">Delete Last Item</string>
    <string name="back">Back</string>
    <string name="Item_Can_Not_Delete">Item Can Not Be Delete</string>
    <string name="Item_Can_Not_Update">Item Can Not Be Update</string>


</resources>
