<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="170dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:drawableEnd="@drawable/ic_error_24dp"
        android:gravity="start"
        android:paddingTop="40dp"
        android:drawablePadding="10dp"
        android:paddingBottom="10dp"
        android:text="@string/option_type"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="240dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/options_dialog_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/delete"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/options_dialog_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="10dp"
            android:layout_gravity="start"
            android:text="@string/edit"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>