<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="550px"
    android:layout_height="350px"
    android:background="@color/cream"
    android:gravity="center"
    android:padding="40px"
    android:id="@+id/save_back"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="5px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150px"
            android:layout_height="wrap_content"
            android:text="@string/required"
            android:textColor="@color/black"
            android:textSize="30px" />

        <TextView
            android:id="@+id/required"
            android:layout_width="220px"
            android:layout_height="35px"
            android:layout_marginVertical="6px"
            android:gravity="center"
            android:paddingHorizontal="10px"
            android:textColor="@color/black"
            android:textSize="30px" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="5px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150px"
            android:layout_height="wrap_content"
            android:text="@string/payed"
            android:textColor="@color/black"
            android:textSize="30px" />

        <EditText
            android:id="@+id/payed"
            android:layout_width="220px"
            android:layout_height="35px"
            android:layout_marginVertical="6px"
            android:background="@drawable/shape2"
            android:gravity="center"
            android:paddingHorizontal="10px"
            android:textColor="@color/black"
            android:textSize="30px" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="5px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150px"
            android:layout_height="wrap_content"
            android:text="@string/remaining"
            android:textColor="@color/black"
            android:textSize="30px" />

        <TextView
            android:id="@+id/remaining"
            android:layout_width="220px"
            android:layout_height="35px"
            android:layout_marginVertical="6px"
            android:gravity="center"
            android:paddingHorizontal="10px"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="30px" />


    </LinearLayout>


    <Button
        android:id="@+id/pay"
        android:layout_width="130px"
        android:layout_height="50px"
        android:layout_gravity="center"
        android:layout_marginTop="15px"
        android:background="@drawable/green_dot"
        android:text="@string/pay"
        android:textColor="@color/white"
        android:textSize="30px" />


</LinearLayout>